Fix/recurring and notifications (#16)
* fix: dashboard data race condition

* fix: current balance toggle button style

* fix: recurring and installments registered in last day of the month vary

* fix: notifications dispatch

* chore: update version in package

* feat: notification fallback improvement

* fix: localized strings

* fix: notification alert when opening the app first time in that month

--- a/Finova/Resources/Localizable.xcstrings
+++ b/Finova/Resources/Localizable.xcstrings
@@ -14,7 +14,7 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "A transação precisa ser ou do tipo entrada ou saída"
-          }
+          } 
         }
       }
     },
@@ -2904,6 +2904,108 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "✅ Notificações Configuradas"
+          }
+        }
+      }
+    },
+    "notification.monthly.rescheduled.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "🔄 Notifications Updated"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "🔄 Notificações Atualizadas"
+          }
+        }
+      }
+    },
+    "notification.monthly.rescheduled.body" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Your monthly notifications have been updated with the latest transaction data."
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Suas notificações mensais foram atualizadas com os dados mais recentes das transações."
+          }
+        }
+      }
+    },
+    "notification.monthly.failure.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "❌ Notification Setup Failed"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "❌ Falha na Configuração"
+          }
+        }
+      }
+    },
+    "notification.monthly.failure.body" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Some notifications could not be scheduled. Please try again later."
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Algumas notificações não puderam ser agendadas. Tente novamente mais tarde."
+          }
+        }
+      }
+    },
+    "notification.monthly.permission.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "🔔 Notification Permission Required"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "🔔 Permissão de Notificação Necessária"
+          }
+        }
+      }
+    },
+    "notification.monthly.permission.body" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Please enable notifications in Settings to receive monthly reminders and transaction alerts."
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ative as notificações nas Configurações para receber lembretes mensais e alertas de transações."
           }
         }
       }
